[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/mainscene.gd" type="Script" id=1]
[ext_resource path="res://assets/sky_background_green_hills.png" type="Texture" id=2]
[ext_resource path="res://assets/Arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 1.png" type="Texture" id=4]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 2.png" type="Texture" id=5]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 3.png" type="Texture" id=6]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 4.png" type="Texture" id=7]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 5.png" type="Texture" id=8]
[ext_resource path="res://assets/star coin animation Pack/star coin shine/star coin 6.png" type="Texture" id=9]
[ext_resource path="res://fire_bow_sound-mike-koenig.wav" type="AudioStream" id=10]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scenes/bonus_icon.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sounds/contemplation.ogg" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="design_sprites" type="Node2D" parent="." index="0"]

editor/display_folded = true

[node name="background" type="Sprite" parent="design_sprites" index="0"]

position = Vector2( 295.182, 247.118 )
scale = Vector2( 0.365928, 0.365928 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="design_sprites" index="1"]

position = Vector2( 27.8793, 28.2493 )
rotation = 0.785398
scale = Vector2( 0.15, 0.155 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="design_sprites" index="2"]

position = Vector2( 291.012, 26.9645 )
scale = Vector2( 0.015, 0.015 )
frames = SubResource( 1 )
animation = "default"
frame = 5
playing = true
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="arrow_sprite" type="Sprite" parent="." index="2"]

position = Vector2( 104.477, 242.024 )
scale = Vector2( 0.207059, 0.207059 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="arrow_txt" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 17.0
margin_right = 114.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="bonus_txt" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 12.0
margin_right = 317.0
margin_bottom = 64.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "90/100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="spawner_icon" parent="." index="6" instance=ExtResource( 12 )]

position = Vector2( 2.81437, 274.09 )
scale = Vector2( 0.524272, 0.524272 )
_sections_unfolded = [ "Transform" ]

[node name="spawn_pos" type="Position2D" parent="." index="7"]

position = Vector2( 0.68908, 457.414 )

[node name="music_player" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


